--- a/src/css/_reopening.scss
+++ b/src/css/_reopening.scss
@@ -23,7 +23,7 @@ cagov-reopening {
 
     @include small-phone {
       padding-bottom: 3rem;
-		}
+    }
   }
 
   .reopening-fields {
@@ -66,7 +66,7 @@ cagov-reopening {
     }
   }
 
-  .field-error {
+  .reopening-field-error {
     position: absolute;
     bottom: 1rem;
 
