moved class .emphasized to general.scss

--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -1995,3 +1995,8 @@ font {
 .text-800-mobile {font-weight: 800 !important;}
 .text-900-mobile {font-weight: 900 !important;}
 }
+
+/* Typography overrides */
+.emphasized {
+  font-size: 1.45rem !important;
+}
