--- a/src/css/trilogy/namespaced/shell/_expanded-menu.scss
+++ b/src/css/trilogy/namespaced/shell/_expanded-menu.scss
@@ -193,12 +193,12 @@ cagov-navoverlay {
         }
         @include tablet {
           padding: 0rem 0;
-          margin: 0 0 0 2px;
-          line-height: 1.5rem;
+          margin: .85rem 0 0 2px;
+          line-height: 1.3rem;
         }
         @include desktop {
           padding: 0rem 0;
-          line-height: 1.5rem;
+          line-height: 1.3rem;
         }
         @include phone {
           /* padding: 0.35rem 0; */
