--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -1972,10 +1972,10 @@ font {
 .bd-darkblue {border: 1px solid $darkblue !important;}
 .bd-ccc { border: solid 1px #ccc; }
 
-.bd-col-white {border: 7px solid #fff;}
-.bd-top-14-orange {border-top: 14px solid #FF8000;}
-.bd-top-14-yellow {border-top: 14px solid #FFCF44;}
-.bd-top-14-lightblue {border-top: 14px solid #92C5DE;}
+.bd-col-white {border: 7px solid $white;}
+.bd-top-14-orange {border-top: 14px solid $orange;}
+.bd-top-14-yellow {border-top: 14px solid $yellow;}
+.bd-top-14-lightblue {border-top: 14px solid $lightblue;}
 
 .has-text-align-center {text-align: center !important;}
 .text-300 {font-weight: 300 !important;}
