--- a/pages/_includes/footer.njk
+++ b/pages/_includes/footer.njk
@@ -28,7 +28,7 @@ ga('tracker3.send', 'pageview');
 	data-anythingToAdd="{{text.anything_to_add}}"
 	data-positiveSurveyUrl="{{text.positive_survey_url}}"
 	data-takeTheSurvey="{{text.take_the_survey}}"
-	data-anyOtherFeedback="{{text.any_other_feedback}}"
+	data-any-other-feedback="{{text.any_other_feedback}}"
 	data-negativeSurveyUrl="{{text.negative_survey_url}}"
 	data-takeOurSurvey="{{text.take_our_survey}}"
 
