CCG 1615, Initial implementation of d3 charts on v2 dashboard. In progress.

--- a/src/css/_dashboard.scss
+++ b/src/css/_dashboard.scss
@@ -7,7 +7,7 @@
 }
 .toggle-group-container {
   width: 1000px;
-  height: 600px;
+  min-height: 650px;
   position: relative;
   .toggle-group-element {
     position: absolute;
