--- a/pages/_includes/footer.njk
+++ b/pages/_includes/footer.njk
@@ -138,6 +138,7 @@ ga('tracker3.send', 'pageview');
 	{{ macros.includeJavascriptByEnv('dashboard', env.dev) }}
 {% endpagesection -%}
 {%- pagesection page, "v2-state-dashboard" %}
+	<script type="module" src="https://d3js.org/d3.v6.min.js"></script><!-- had some trouble importing this, error circular dependencies after npm install so including here -->
 	{{ macros.includeJavascriptByEnv('dashboard-v2', env.dev) }}
 {% endpagesection -%}
 
