CCG-1615, Initial implementation.

--- a/src/css/_dashboard.scss
+++ b/src/css/_dashboard.scss
@@ -8,6 +8,7 @@
 .toggle-group-container {
   width: 1000px;
   min-height: 650px;
+  margin-bottom:50px;
   position: relative;
   .toggle-group-element {
     position: absolute;
