--- a/src/js/dashboard-v2/charts/cagov-chart-dashboard-groups-race-ethnicity-cases/index.scss
+++ b/src/js/dashboard-v2/charts/cagov-chart-dashboard-groups-race-ethnicity-cases/index.scss
@@ -14,6 +14,10 @@ cagov-chart-dashboard-groups-race-ethnicity-cases {
       font-weight: 300;
       font-size: 0.75rem;
     }
+    .chart-title {
+      font-weight: 300;
+      font-size: 1.0rem;
+    }
 }
 .d-hide {
   display:none;
