--- a/src/css/_dashboard.scss
+++ b/src/css/_dashboard.scss
@@ -17,7 +17,7 @@
     width: 100%;
   }
   &.cases-group {
-    height: 600px;
+    min-height: 650px;
   }
 }
 
@@ -40,7 +40,7 @@
 @media (max-width: 760px) { 
   .toggle-group-container {
     width: 100%;
-    height: 930px;
+    height: 1500px;
     &.cases-group {
       height: 690px;
     }
