--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -235,7 +235,7 @@
 			</div>
 			<div class="hero-photo" role="complementary" aria-labelledby="hero-background">
 				<div class="hero-photo-fade"></div>
-				<!--<img class="hero-photo-pic" src="/img/hero.jpg" alt="Photo Description">-->
+				<img class="hero-photo-pic" src="/img/hero.jpg" alt="Photo Description">
 				<div id="hero-background" class="hero-photo-description">Photo Description</div>
 			</div>
 		</section>
