--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -163,7 +163,7 @@
 						</div>
 					</div>
 					<div class="text-sm text-center text-300 ptop-12px">
-						Details about this data are available in the <a class="hero-stats-footer-slink" href="/state-dashboard/">state dashboard</a>.
+						Details about this data are available in the <a class="hero-stats-footer-slink" href="/state-dashboard/">state dashboard</a>. Deaths reported on February 25, 2021, include a backlog of 806 deaths from Los Angeles County that were not initially recorded as COVID-19 deaths. The majority of these deaths occurred between December 3, 2020, and February 3, 2021.
 					</div><!--
 <<p class="text-center text-sm text-300 mt-4">Rates of cases and tests are based on a 7 day average with a 7 day lag.</p>
 <p class="text-center text-sm text-300 mt-3">Rates of deaths are based on a 7 day average with a 21 day lag due to delays in reporting. 
