--- a/pages/_includes/dashboard.njk
+++ b/pages/_includes/dashboard.njk
@@ -44,11 +44,13 @@
 
 <!-- state dash 1.0 comment in njk -->
 <div class="bg-lightblue py-5">
-    <div class="highlight">
-    <h3 class="color-primary mt-0">Deaths note for February 25, 2021</h3>
-    <p>Deaths reported on February 25, 2021, include a backlog of 806 deaths from Los Angeles County that were not initially recorded as COVID-19 deaths. The majority of these deaths occurred between December 3, 2020, and February 3, 2021.</p>
-    </div>
     <div class="container py-2">
+        <div class="row pb-4">
+            <div class="highlight">
+                <h3 class="color-primary mt-0">Deaths note for February 25, 2021</h3>
+                <p>Deaths reported on February 25, 2021, include a backlog of 806 deaths from Los Angeles County that were not initially recorded as COVID-19 deaths. The majority of these deaths occurred between December 3, 2020, and February 3, 2021.</p>
+            </div>
+        </div>
         <div class="row pb-4">
             <div class="col-lg-10 mx-auto">
                 <h2 class="text-center color-purple">Update for {{_varStatDate_}}</h2>
