--- a/src/css/_dashboard.scss
+++ b/src/css/_dashboard.scss
@@ -41,7 +41,7 @@
   top:-12em;
 }
 @media (max-width: 760px) { 
-  .toggle-group-container {
+  .toggle-group-container:not(.d3-charts) {
     width: 100%;
     height: 1500px;
     &.cases-group {
