add arrow table

--- a/src/css/_index.scss
+++ b/src/css/_index.scss
@@ -32,6 +32,7 @@
 @import './dashboard';
 @import './equitydash';
 @import './charts';
+@import './arrow-table';
 
 /* Overrides for non-English languages. */
 @import './multilingual';
