implemented the make it bigger just for ie technique

--- a/src/js/vaccines/charts/ie11.scss
+++ b/src/js/vaccines/charts/ie11.scss
@@ -17,6 +17,24 @@ cagov-chart-vaccination-groups-gender {
     width: 613px;
   }
 }
+cagov-chart-vaccines-hpi-by-dose {
+  .svg-holder svg {
+    width: 600px;
+    height: 490px;
+  }
+}
+cagov-chart-vaccines-hpi-by-people {
+  .svg-holder svg {
+    width: 613px;
+    height: 490px;
+  }
+}
+cagov-chart-vaccines-hpi-by-dose {
+  .svg-holder svg {
+    width: 613px;
+    height: 490px;
+  }
+}
 
 svg .tick text {
   text-anchor: start;
