--- a/pages/_includes/dashboard.njk
+++ b/pages/_includes/dashboard.njk
@@ -48,7 +48,7 @@
     <div class="row pb-4">
             <div class="highlight">
                 <h3 class="color-primary mt-0">Note for March 3, 2021</h3>
-                <p>The vaccines administered data for March 3, 2021, will be included in the March 4, 2021, update.</p>
+                <p>he vaccines administered data for March 3, 2021, only partially updated. The remaining vaccination data will be included in the March 4, 2021, update.</p>
             </div>
         </div>
         <div class="row pb-4">
