--- a/pages/_includes/dashboard.njk
+++ b/pages/_includes/dashboard.njk
@@ -48,7 +48,7 @@
     <div class="row pb-4">
             <div class="highlight">
                 <h3 class="color-primary mt-0">Note for March 5, 2021</h3>
-                <p>We are working on fixing an issue with the charts on this page. Additionally, the March 5, 2021, count of administered doses includes 135,736 doses that were not previously processed. These doses were reported between March 2, 2021, and March 3, 2021.</p>
+                <p>We are working on fixing an issue with the charts on this page. Additionally, the vaccines administered data for March 5, 2021, includes 135,736 doses that were not previously processed. These doses were reported between March 2, 2021, and March 3, 2021.</p>
             </div>
         </div>
         <div class="row pb-4">
