--- a/pages/_includes/dashboard.njk
+++ b/pages/_includes/dashboard.njk
@@ -47,8 +47,9 @@
     <div class="container py-2">
     <div class="row pb-4">
             <div class="highlight">
-                <h3 class="color-primary mt-0">Note for March 4, 2021</h3>
-                <p>The vaccines administered data for March 4, 2021, is only a partial update. The remaining vaccination data will be included in the March 5, 2021, update.</p>
+                <h3 class="color-primary mt-0">Note for March 5, 2021</h3>
+                <p>We are working on fixing an issue with the charts on this page. You can find find information on <a href="https://data.ca.gov/dataset/covid-19-cases">cases, deaths, and demographics</a>; <a href="https://data.ca.gov/dataset/covid-19-testing">tests</a>; and <a href="https://data.ca.gov/dataset/covid-19-hospital-data">hospitals and ICUs</a> in the California Open Data Portal.</br>
+		Additionally, the vaccines administered data for March 5, 2021, includes 135,736 doses that were not previously processed. These doses were reported between March 2, 2021, and March 3, 2021.</p>
             </div>
         </div>
         <div class="row pb-4">
