--- a/src/css/_charts.scss
+++ b/src/css/_charts.scss
@@ -162,8 +162,10 @@
     // background: #fff;
     pointer-events: none;
 
-    padding: 10px;
-    box-shadow: -12px 11px 5px -4px rgba(0, 0, 0, 0.4);
+    /* padding: 10px; */
+    padding: 1rem 2rem;
+    box-shadow: 0 0.5rem 1.5rem 0 rgba(0,0,0,.3);
+    /* box-shadow: -12px 11px 5px -4px rgba(0, 0, 0, 0.4); */
     border: solid 1px #ccc;
     min-width: 100px;
   }
