--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -182,6 +182,7 @@ button.card-header.accordion-alpha:focus {
   padding-right: 1.5rem !important;
   padding-left: 1.5rem !important;
   font-weight: 500;
+  font-family: Montserrat,sans-serif;
 }
 
 .btn-matrix.bg-purple-btn,
