--- a/src/css/_reopening.scss
+++ b/src/css/_reopening.scss
@@ -6,6 +6,14 @@
     margin-bottom: 0;
     padding-bottom: 0;
   }
+
+  .matrix-holder {
+    cagov-accordion {
+      .accordion-title h4 {
+        font-weight: 300;
+      }
+    }
+  }
 }
 
 cagov-reopening {
