Removing March 10 LA county note

--- a/pages/_includes/dashboard.njk
+++ b/pages/_includes/dashboard.njk
@@ -47,8 +47,8 @@
     <div class="container py-2">
     <div class="row pb-4">
             <div class="highlight">
-                <h3 class="color-primary mt-0">Note for March 10, 2021</h3>
-                <p>The statewide case count includes 4,558 confirmed COVID-19 cases reported by Los Angeles County. Of these, 880 are newly identified cases. The remaining 3678 cases reported on March 9, 2021, are cases that were previously identified as probable between July 14, 2020, and March 7, 2021, and have been reclassified as confirmed cases. Additionally, today’s count of administered doses is incomplete due to data processing latency. Complete counts will be updated in this dashboard as available this week.</p>
+                <h3 class="color-primary mt-0">Note for March 11, 2021</h3>
+                <p>Additionally, today’s count of administered doses is incomplete due to data processing latency. Complete counts will be updated in this dashboard as available this week.</p>
             </div>
         </div>
         <div class="row pb-4">
