add ethnio to homepage

--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -375,3 +375,6 @@
 	<!-- end video overlay -->
 	{{ macros.includeJavascriptByEnv('video', env.dev) }}
 {% endblock %}
+
+<!-- Ethnio Activation Code -->
+<script type="text/javascript" language="javascript" src="//ethn.io/45064.js" async="true" defer charset="utf-8"></script>
