add new utility class to close bottom margin

--- a/src/css/bootstrap/_all.scss
+++ b/src/css/bootstrap/_all.scss
@@ -6501,6 +6501,10 @@ a.close.disabled {
   margin-bottom: 3rem !important;
 }
 
+.mb-neg-2 {
+  margin-bottom: -2.5rem !important;
+}
+
 .mb-auto {
   margin-bottom: auto !important;
 }
