Add temporary message to what's open search about upcoming messaging changes

--- a/src/css/_reopening.scss
+++ b/src/css/_reopening.scss
@@ -160,6 +160,9 @@ cagov-reopening {
   .btn-primary {
     text-transform: uppercase;
   }
+  form {
+    padding-bottom: 0rem;
+  }
 }
 .card-title .card-title {
   display: none;
