The great renaming. Also reapplied Aaron's fixes to WP.

--- a/pages/_includes/dashboard-v1.njk
+++ b/pages/_includes/dashboard-v1.njk
@@ -42,7 +42,7 @@
 {%-set _varTestedTrendClassD_       = '' if _varTestedTrend_ < 0 else "d-none" %}
 
 
-<!-- state dash 1.0 comment in njk -->
+<!-- state dash 1.0 comment in njk --> <!-- JBUM WAS HERE -->
 <div class="bg-lightblue py-5">
     <div class="container py-2">
     <div class="row pb-4">
