add accordion crawl exclude class on table accordions

--- a/pages/_includes/reopening-matrix.njk
+++ b/pages/_includes/reopening-matrix.njk
@@ -33,7 +33,7 @@
     {% endif %}
 
     <cagov-accordion class="prog-enhanced">
-      <div class="card">
+      <div class="card js-qa-exclude">
         <button
           class="card-header accordion-alpha"
           type="button"
