Patch reopening matrix to use en table so that the accordions will at least be correct & not show an error (the content on that matrix & required with this release) - will revert when translation issues are resolved.

--- a/pages/_includes/reopening-matrix.njk
+++ b/pages/_includes/reopening-matrix.njk
@@ -1,4 +1,4 @@
-{%- set JSON = pubData[language.id].reopeningMatrixData -%}
+{%- set JSON = pubData["en"].reopeningMatrixData -%}
 {%- set DataTables = ["Table1", "Table3", "Table4"] -%}
 {%- set Headers = JSON.Table2[0] -%}
 
