add RTL support for full bleed content on safer economy page

--- a/src/css/_reopening.scss
+++ b/src/css/_reopening.scss
@@ -16,6 +16,14 @@
   }
 }
 
+html[dir=rtl] {
+  .full-bleed {
+    width: 100vw;
+    margin-left: auto;
+    margin-right: calc(50% - 50vw);
+  }
+}
+
 cagov-reopening {
   .subtitle-color {
     color: #1f2574;
