--- a/src/css/_charts.scss
+++ b/src/css/_charts.scss
@@ -164,9 +164,10 @@
 
     /* padding: 10px; */
     padding: 1rem 2rem;
-    box-shadow: 0 0.5rem 1.5rem 0 rgba(0,0,0,.3);
+    box-shadow: 0px 0px 5px 2px rgba(0,0,0,.14);
     /* box-shadow: -12px 11px 5px -4px rgba(0, 0, 0, 0.4); */
-    border: solid 1px #ccc;
+    border: none;
+    font-size: 0.75rem;
     min-width: 100px;
   }
 
