--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -2066,7 +2066,7 @@ font {
   font-size: 0.95rem !important;
   line-height: 1.5;
   margin-bottom: 0.95rem;
-  font-style: italic;
+  // font-style: italic;
 }
 
 .text-disclaim {
