--- a/pages/_includes/reopening-matrix.njk
+++ b/pages/_includes/reopening-matrix.njk
@@ -1,4 +1,4 @@
-{%- set JSON = pubData["en"].reopeningMatrixData -%}
+{%- set JSON = pubData[language.id].reopeningMatrixData -%}
 {%- set DataTables = ["Table1", "Table3", "Table4"] -%}
 {%- set Headers = JSON.Table2[0] -%}
 
