Removed pdf icon form arrow link (ccg-1853)

--- a/src/css/_buttons.scss
+++ b/src/css/_buttons.scss
@@ -377,6 +377,7 @@ button.clear {
         transition: all .3s ease;
         fill:$darkblue;
       }
+      .pdf-link-icon {display: none;}
       //link hover and focus state
       &:hover, &:focus {
         color:$blue;
@@ -400,6 +401,7 @@ button.clear {
         transition: all .3s ease;
         fill:$white;
       }
+      .pdf-link-icon {display: none;}
       //link hover and focus state
       &:hover, &:focus {
         color:$orange !important;        ;
@@ -424,6 +426,7 @@ button.clear {
         transition: all .3s ease;
         fill:$lightblue;
       }
+      .pdf-link-icon {display: none;}
       //link hover and focus state
       &:hover, &:focus {
         color:$orange !important;        ;
