adding new section to homepage phase 1 pre design review

--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -246,15 +246,35 @@ formatNumber(tags,1)-%}
 		</section>
 	</hero-stats>
 
-
-
-
+  <section class="featured-content" role="region" aria-label="Recent updates">
+    <div class="news">
+			<div class="news-wrap">    
+				<div class="news-grid">
+					<article class="news-item">
+						<a href="/vaccines/" class="featured-content-image">
+							<img src="https://files.covid19.ca.gov/img/homepg/featured-vaccines.jpg" />
+						</a>
+						<p class="mt-2 mb-0"><a class="bold text-larger" href="/vaccines/">Get vaccinated</a></p>
+					</article>
+					<article class="news-item">
+						<a href="/safer-economy/" class="featured-content-image">
+							<img src="https://files.covid19.ca.gov/img/homepg/featured-whatsopen.jpg" />
+						</a>
+						<p class="mt-2 mb-0"><a class="bold text-larger" href="#">See what's open in your county</a></p>
+					</article>
+					<article class="news-item">
+						<a href="/safer-economy/#county-status" class="featured-content-image">
+							<img src="/img/cali-counties-colors.svg" />
+						</a>
+						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">Find your county tier</a></p>
+					</article>
+				</div>
+			</div>
+    </div>
+	</section>
 
 	<!--RECENT UPDATES-->
 	{% include "./recent-updates-home.html" %}
-
-
-
 
 	<!-- PEOPLE WANTS TO KNOW SECTION -->
 	<faq-section>
