--- a/pages/_includes/recent-updates-home.html
+++ b/pages/_includes/recent-updates-home.html
@@ -1,7 +1,7 @@
 
 
 <news-section>
-  <section class="news trigger" role="region" aria-label="Recent updates">
+  <section class="news trigger bg-lightblue" role="region" aria-label="Recent updates">
     <div class="news-wrap">
     
       <h2 class="color-purple mt-4 mb-0">Recent updates</h3>
