--- a/src/css/_news.scss
+++ b/src/css/_news.scss
@@ -138,15 +138,12 @@ news-section, .featured-content {
   }
   .featured-content-image {
     border: solid 1px;
-    display: inline-block;
+    display: block;
+    overflow: hidden;
   }
   .featured-content-image img {
-    min-width: 390px;
-    min-height: 250px;
-    max-height: 250px;
-    @include phone {
-      min-width: auto;
-      max-width: 300px
-    }
+    width: 100%;
+    height: 250px;
+    object-fit: fill;
   }
 }
