--- a/pages/_includes/footer.njk
+++ b/pages/_includes/footer.njk
@@ -159,4 +159,7 @@ ga('tracker3.send', 'pageview');
 <script nomodule src="https://d3js.org/d3.v5.min.js"></script><!-- lot of transpilation issues, using older d3 for ie -->
 <script nomodule src="/js/es5.js"></script>
 <cagov-anchor-events />
+{% if page.url != "/" %} <!-- Do not display go-to-top on homepage. -->
+	<cagov-go-to-top />
+{% endif %}
 {% include "googletranslate.njk" %}
