--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -247,7 +247,7 @@ formatNumber(tags,1)-%}
 	</hero-stats>
 
   <section class="featured-content" role="region" aria-label="Recent updates">
-    <div class="news">
+    <div class="news pt-6">
 			<div class="news-wrap">    
 				<div class="news-grid">
 					<article class="news-item">
@@ -264,7 +264,7 @@ formatNumber(tags,1)-%}
 					</article>
 					<article class="news-item">
 						<a href="/safer-economy/#county-status" class="featured-content-image">
-							<img src="/img/cali-counties-colors.svg" />
+							<img class="state-map" src="/img/cali-counties-colors.svg" />
 						</a>
 						<p class="mt-2 mb-0"><a class="bold text-larger" href="/safer-economy/#county-status">Find your county tier</a></p>
 					</article>
@@ -284,7 +284,7 @@ formatNumber(tags,1)-%}
 			<div class="faq-twitter-wrap">
 				{%- for column, items in pubData[language.id].peopleWantToKnow %}
 					<div class="faq trigger">
-						<ul class="arrow-links">
+						<ul class="arrow-links mb-0">
 						{%- for item in items %}
 						<li>    
 							<a class="link-arrow-white js-event-hm-wtk" href="{{ item._url }}">
@@ -305,9 +305,9 @@ formatNumber(tags,1)-%}
 
 	<!-- FOR BUSINESSES SECTION -->
 <learn-more-section>
-<section class="faq-twitter pb-4">
+<section class="faq-twitter">
 	<h2 class="text-center color-purple mt-0">For businesses</h2>
-	<div class="faq-twitter-wrap pb-5">
+	<div class="faq-twitter-wrap">
 	{% set JSONgovraw %}{% include "../wordpress-posts/common-page-labels.json" %}{% endset %}
         {% set JSONgov = JSONgovraw | jsonparse %}
         {%- set RowsGov = JSONgov.Table4 -%}
