--- a/src/css/bootstrap/_all.scss
+++ b/src/css/bootstrap/_all.scss
@@ -6795,6 +6795,10 @@ a.close.disabled {
   padding-top: 3rem !important;
 }
 
+.pt-6 {
+  padding-top: 3.5rem !important;
+}
+
 .pr-0 {
   padding-right: 0 !important;
 }
