link to dashboard anchor

--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -196,7 +196,7 @@ formatNumber(tags,1)-%}
 						<span class="underline"> {{varStateSummary}}</span></a>
 
 
-						<a class="hero-stats-footer-link mt-2" href="/vaccines/">
+						<a class="hero-stats-footer-link mt-2" href="/vaccines/#California-vaccines-dashboard">
 						<span class="no-underline " aria-hidden="true">
 
 						<svg class="chart-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
