Chart reorg. Work in progress.

--- a/src/js/dashboard-v2/charts/cagov-chart-dashboard-hospitalized-patients/index.scss
+++ b/src/js/dashboard-v2/charts/cagov-chart-dashboard-hospitalized-patients/index.scss
@@ -14,11 +14,11 @@ cagov-chart-dashboard-hospitalized-patients-hospitalized.chart {
     //   font-weight: 300;
     //   font-size: 0.75rem;
     // }
-    // .chart-title {
-    //   font-weight: 300;
-    //   font-size: 1.2rem;
-    //   margin-bottom:0px;
-    // }
+    .chart-title {
+      font-weight: 300;
+      font-size: 1.2rem;
+      margin-bottom:0px;
+    }
 }
 .d-hide {
   display:none;
