--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -57,7 +57,7 @@ formatNumber(tags,1)-%}
 						<h1 class="hero-headline m-0 pb-3">{{varHeroTitle}}</h1>
 						<h2 class="hero-subhead m-0 pt-2 pb-3">{{ varHeroP2 }}</h2>
 						
-						<a href="{{ "vaccines/" | toTranslatedPath(tags) }}" class="link-arrow-lightblue justify-content-start">
+						<a href="{{ "vaccines/" | toTranslatedPath(tags) }}" class="link-arrow-orange justify-content-start">
 							<div class="link-arrow-label">{{ varHeroP1 }}</div>
 							<cagov-arrow></cagov-arrow>
 						</a>
